--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.48.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
