--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.4.6",
     "@reduxjs/toolkit": "^2.5.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/vite": "^4.0.9",
+    "@vis.gl/react-google-maps": "^1.5.1",
     "axios": "^1.7.9",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
