--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,36 @@
-name: Cypress Tests
+name: Run Cypress Tests
 
-on: push
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  cypress-run:
-    runs-on: ubuntu-24.04
+  cypress:
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: ./frontend  # Run all commands inside the frontend directory
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
-      # Install npm dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          build: npm run build
-          start: npm start
+          node-version: 18
+          cache: 'npm'  # Cache dependencies for faster installs
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build project
+        run: npm run build
+
+      - name: Start server and run Cypress tests
+        run: npm run e2e:dev
