--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,7 @@ name: Run Cypress Tests
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - writing-tests
 
 jobs:
   cypress:
