--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,12 @@
         "@mui/icons-material": "^6.3.1",
         "@mui/material": "^6.4.6",
         "@reduxjs/toolkit": "^2.5.0",
+        "@stitches/react": "^1.2.8",
         "@supabase/auth-ui-react": "^0.4.7",
         "@supabase/auth-ui-shared": "^0.1.8",
         "@supabase/supabase-js": "^2.48.1",
         "@tailwindcss/vite": "^4.0.9",
+        "@types/chai": "^5.2.0",
         "@vis.gl/react-google-maps": "^1.5.1",
         "axios": "^1.7.9",
         "lucide-react": "^0.475.0",
@@ -41,6 +43,7 @@
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
         "@testing-library/user-event": "^14.6.1",
+        "@types/mocha": "^10.0.10",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
         "@vitejs/plugin-react-swc": "^3.5.0",
