--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,8 +1,13 @@
 {
-    "files": [],
-    "references": [
-        { "path": "./tsconfig.app.json" },
-        { "path": "./tsconfig.node.json" }
-    ],
-    "types": ["cypress", "@testing-library/cypress"]
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ],
+  "compilerOptions": {
+    "types": ["cypress", "@testing-library/cypress"],
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "allowUnusedLabels": true
+  }
 }
