--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "build:frontend": "cd frontend && npm run build"
     },
     "devDependencies": {
+        "@types/mocha": "^10.0.10",
         "concurrently": "^8.2.2"
     }
 }
