--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: Run Cypress Tests
 
 on:
+  push:
+    branches-ignore:
+      - starter
   pull_request_review:
     branches-ignore:
       - starter
