update workflow to ignore updateReadme branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,11 @@ name: Run Cypress Tests
 on:
   push:
     branches-ignore:
+      - updateReadme
       - starter
   pull_request_review:
     branches-ignore:
+      - updateReadme
       - starter
   pull_request:
     branches:
